composer.json edited online with Bitbucket

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "autoload": {
         "psr-4": {
-            "budimanlai\\yii2-helpers": ""
+            "budimanlai\\yii2-helpers\\": ""
         }
     }
 }
