--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
             "email": "budiman.lai@gmail.com"
         }
     ],
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.4.0",
         "yiisoft/yii2": ">=2.0.6"
