--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
             "website": "https://budimanlai.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": ">=5.4.0",
         "yiisoft/yii2": ">=2.0.6"
