--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "budimanlai/yii2-helpers",
+    "name": "budimanlai/yii2-common",
     "type": "yii2-extension",
     "description": "Yii2 Helpers. DateHelper, FileHelper, Html, ModelHelper, NumberHelper, StringHelper, UUID, URL",
     "keywords": ["yii2", "date", "file", "helper", "html", "model", "number", "string", "uuid", "url", "password"],
@@ -15,12 +15,13 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.4.0",
-        "yiisoft/yii2": ">=2.0.6"
+        "php": ">=7.0.0",
+        "yiisoft/yii2": ">=2.0.0",
+        "yiisoft/yii2-httpclient": "^2.0"
     },
     "autoload": {
         "psr-4": {
-            "budimanlai\\helpers\\": "src"
+            "budimanlai\\common": "src"
         }
     }
 }
